apply plugin: 'com.android.library'
apply plugin: 'com.github.ben-manes.versions'

android {
  compileSdkVersion 22
  buildToolsVersion "21.1.2"

  compileOptions {
    sourceCompatibility JavaVersion.VERSION_1_7
    targetCompatibility JavaVersion.VERSION_1_7
  }

  defaultConfig {
    minSdkVersion 15
    targetSdkVersion 22
    versionName project.VERSION_NAME
    versionCode Integer.parseInt(project.VERSION_CODE)
    consumerProguardFiles 'consumer-proguard-rules.pro'
  }

  testOptions.unitTests.all {
    testLogging {
      events 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
      maxHeapSize "2048m"
      jvmArgs '-noverify', '-XX:MaxPermSize=256m'
    }
  }
}

dependencies {
  testCompile('junit:junit:4.12') {
    exclude module: 'hamcrest-core'
  }
  testCompile 'org.robolectric:robolectric:3.1.4'
  testCompile 'org.mockito:mockito-all:1.9.5'
  testCompile 'com.google.truth:truth:0.30'

  compile 'com.google.guava:guava:18.0'
  compile 'com.android.support:support-annotations:23.1.1'
  compile 'org.chalup.thneed:thneed:0.7'
  compile 'com.getbase.android.db:library:0.13.3'
  compile 'org.chalup.microorm:microorm:0.6.2'
  compile 'com.getbase.android.forger:forger:0.1'
  compile 'com.android.support:support-v4:23.1.1'
  compile 'com.getbase.android.schema:library:0.7'
}

apply from: './gradle-mvn-push.gradle'
